# lockstep

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  lockstep-agent-briefs.md  lockstep-master-plan.md  lockstep-phase-specs-all.md
bench/: CMakeLists.txt  PERF_BASELINE.md  bench_main.cpp  bench_smoke_test.cpp  cdc_bench_main.cpp  sql_bench_main.cpp
bench/compare/: .gitignore  COMPETITIVE_SUMMARY.md  NARRATIVE.md  REPORT.md  SCHEMA.md  SPEC.md  docker-compose.yml  multi_shard_ceiling.sh  multimachine_repl_shards.sh  multimachine_repl_throughput.sh  multimachine_test.sh  multimachine_throughput.sh  report.py  run.sh  server_ceiling.sh  ycsb.Dockerfile
bench/compare/adapters/: emit_json.py  lockstep.sh  parse_tpcc.py  parse_ycsb.py  tpcc.sh  ycsb.sh
bench/compare/cdc/: REPORT.md  run_cdc.sh
bench/compare/distributed_join/: REPORT.md  dist_join_bench.cpp  run.sh
bench/compare/mcp/: REPORT.md  lockstep_inproc.cpp  run_locomo.py  run_mem0.py
bench/compare/queue/: REPORT.md  lockstep_queue.cpp  run_queue.sh
bench/compare/sql_analytics/: REPORT.md  duck_bench.py  embedded_engines.py  lockstep_analytics.cpp  run_analytics.sh
bench/compare/vector/: REPORT.md  lockstep_vector.cpp  lockstep_vector_v2.cpp  milvus_v2.py  run_vector.sh  run_vector_v2.sh
bench/compare/workloads/: read  rw5050  write
bench/include/lockstep/bench/: Bench.hpp  Report.hpp
briefs/: README.md  phase0.md  phase1.md  phase2-batch2.md  phase2.md  phase4.md  phase5.md  phase6.md  phase7.md
cli/: CMakeLists.txt  bank_example.cpp  cli_determinism.cmake  lockstep_admin.cpp  lockstep_cli.cpp  lockstep_kvbench.cpp  lockstep_mcpd.cpp  lockstep_pgd.cpp  lockstep_pgd_lite.cpp  lockstep_recover.cpp  lockstep_sqlbench.cpp  lockstepd.cpp
cmake/: Sanitizers.cmake  Toolchain.cmake  Warnings.cmake
consensus/: CMakeLists.txt
consensus/include/lockstep/consensus/: ClusterDriver.hpp  ConformanceCheckers.hpp  ConsensusNode.hpp  CrossCheck.hpp  Observation.hpp  TrivialNodes.hpp
consensus/include/lockstep/consensus/raft_a/: RaftNodeA.hpp
consensus/include/lockstep/consensus/raft_b/: RaftNodeB.hpp
consensus/include/lockstep/consensus/sequencer/: Sequencer.hpp
core/: CMakeLists.txt
core/include/lockstep/core/: Error.hpp  Future.hpp  IClock.hpp  IDisk.hpp  INetwork.hpp  IRandom.hpp  IScheduler.hpp  Scheduler.hpp  Task.hpp  Trace.hpp
core/include/lockstep/core/detail/: FramePool.hpp  ReadyQueue.hpp  SchedulerSink.hpp  SharedStatePool.hpp
docs/: KILLER_FEATURES.md  PRODUCT_ROADMAP.md  TECH_PLAN.md  coding-standards.md  mutation.md  query-model.md  runtime-determinism.md
harness/: CMakeLists.txt
harness/include/lockstep/harness/: Checker.hpp  CheckerRunner.hpp  History.hpp  SeedBurn.hpp
harness/include/lockstep/harness/checkers/: Durability.hpp  Integrity.hpp  Linearizable.hpp  SessionMonotonic.hpp
harness/include/lockstep/harness/kv/: Buggify.hpp  BuggyKvSystems.hpp  Codec.hpp  KvSim.hpp  KvSystem.hpp  ReplicatedKvSystem.hpp
harness/runner/: seedburn_main.cpp
log/: CMakeLists.txt
providers/prod/: CMakeLists.txt
providers/prod/include/lockstep/prod/: ProdAuth.hpp  ProdClock.hpp  ProdConsensusNode.hpp  ProdDisk.hpp  ProdLog.hpp  ProdMetrics.hpp  ProdNetwork.hpp  ProdParallelExecutor.hpp  ProdPgRaftServer.hpp  ProdPgServer.hpp  ProdRandom.hpp  ProdReactor.hpp  ProdScram.hpp  ProdScratchDir.hpp  ProdServerNode.hpp  ProdShardRunner.hpp  ProdTls.hpp  ProdUring.hpp  ReplayTrace.hpp
providers/sim/: CMakeLists.txt
providers/sim/include/lockstep/sim/: SeededRandom.hpp  SimDisk.hpp  SimNetwork.hpp
providers/sim/include/lockstep/sim/detail/: SimBus.hpp
query/: CMakeLists.txt
query/include/lockstep/query/: Database.hpp  Driver.hpp  LocalCluster.hpp  ParallelExecutor.hpp  Query.hpp
query/include/lockstep/query/mcp/: McpServer.hpp
query/include/lockstep/query/sql/: Ast.hpp  Catalog.hpp  ColumnBlock.hpp  DistributedSql.hpp  Engine.hpp  Json.hpp  PERF_PLAN.md  Parser.hpp  Uint256.hpp
query/include/lockstep/query/wire/: ClientStub.hpp  PgWire.hpp  Protocol.hpp  Server.hpp  SqlRows.hpp
query/sql/: SQL_FEATURES_PLAN.md
scripts/: gate-linux.sh  gate.sh  s87_allocprof.sh  tlc.sh
specs/: CommitOrdering.cfg  CommitOrdering.check.md  CommitOrdering.tla  Consensus.cfg  Consensus.check.md  Consensus.tla  Consensus1.cfg  Consensus_teeth.cfg  Membership.cfg  Membership.check.md  Membership.tla  Membership2.cfg  Sequencer.cfg  Sequencer.check.md  Sequencer.tla  Snapshot.cfg  Snapshot.check.md  Snapshot.tla  XShardCommit.cfg  XShardCommit.check.md  (+3 more)
storage/: CMakeLists.txt
storage/include/lockstep/storage/: Backup.hpp  Codec.hpp  DiffHarness.hpp  Engine.hpp  Format.hpp  KeyedOp.hpp  Oracle.hpp  Pitr.hpp  Recovery.hpp  SSTable.hpp  StateHash.hpp  ValueLog.hpp  WalEngine.hpp
tests/: CMakeLists.txt  checker_framework_test.cpp  consensus_cluster_identity_test.cpp  consensus_crosscheck_test.cpp  consensus_ctrl_repair_test.cpp  consensus_force_new_cluster_test.cpp  consensus_harness_test.cpp  consensus_impl_a_test.cpp  consensus_impl_b_test.cpp  consensus_membership_test.cpp  consensus_meta_dualcopy_test.cpp  consensus_snapshot_test.cpp  consensus_state_hash_test.cpp  forced_bug_repro_test.cpp  kv_checkers_test.cpp  kv_seedburn_test.cpp  kv_sim_test.cpp  kv_teeth_test.cpp  mcp_server_test.cpp  pg_wire_test.cpp  ping_pong_gate_test.cpp  prod_auth_test.sh  prod_cluster_smoke.sh  prod_consensus_durability_teeth_test.cpp  prod_consensus_test.cpp  prod_disk_test.cpp  prod_jepsen.sh  prod_load.sh  prod_metrics_test.sh  prod_network_test.cpp  prod_perf.sh  prod_provider_test.cpp  prod_reactor_test.cpp  prod_replicated_shards.sh  prod_scale.sh  prod_server_test.cpp  prod_shard_smoke.sh  prod_tls_test.sh  prod_uring_test.cpp  provider_conformance_test.cpp  (+123 more)
tests/harness/: invariants.hpp  ping_pong.hpp
tests/provider_conformance/: ContractConformance.hpp
txn/: CMakeLists.txt
txn/include/lockstep/txn/: Checkers.hpp  CrossShard.hpp  DeterministicExecutor.hpp  DiffHarness.hpp  IndependentExecutor.hpp  Oracle.hpp  TeethExecutors.hpp  Transaction.hpp
(+18 files in other folders)
